# VapourSynth-Yadifmod

./: GNUmakefile  Makefile.am  README.md  configure  configure.ac  meson.build
Yadifmod/: Yadifmod.cpp  Yadifmod.vcxproj  Yadifmod.vcxproj.filters
